--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.TruckSharingTask"
         tools:targetApi="31">
-
+        <activity
+            android:name=".EstimateActivity"
+            android:exported="false" />
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
 
@@ -30,15 +32,12 @@
         -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="YOUR_API_KEY" />
+            android:value="AIzaSyB65LpbHTkKKJ4EE7gV--oCVD4ryOaYjrI" />
 
         <activity
-            android:name=".MapsActivity"
+            android:name=".MapsActivity2"
             android:exported="false"
-            android:label="@string/title_activity_maps" />
-        <activity
-            android:name=".EstimateMapActivity"
-            android:exported="false" />
+            android:label="@string/title_activity_maps2" />
         <activity
             android:name=".accountActivity"
             android:exported="false" />
